# explore_nwps

./: README.md  explore_gefs.py  pyproject.toml
explore_nwps/: unique_parts.py
explore_nwps/aws/: list_objects.py
explore_nwps/datasets/: gefs.py
metadata/gefs/: index.toml  index.yaml
tests/: test_unique_parts.py
tests/aws/: test_list_objects.py
