[project]
name = "explore-nwps"
version = "0.1.0"
description = "Explore numerical weather prediction datasets on cloud object storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.81",
    "marimo>=0.10.2",
    "pytest>=8.3.4",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--doctest-modules" # Run doctests in .py files.
